--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,18 +5,28 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --brand: #f16820;
+  --accent: #060709;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
+    --brand: #f16820;
+    --accent: #060709;
   }
 }
 
 body {
-  color: var(--foreground);
-  /* background: var(--background); */  
   background: #fafafa;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  @apply w-full sm:w-[80%] mx-auto
+}
+
+.flex-center-between {
+  @apply flex items-center justify-between
 }
