--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,8 +37,28 @@ body {
   @apply flex items-center justify-between
 }
 
+.h1 {
+  @apply text-6xl font-black leading-[70px] tracking-normal
+}
+
+.h2 {
+  @apply text-4xl font-black
+}
+
+.h3 {
+  @apply text-2xl font-black tracking-wide
+}
+
+.h4 {
+  @apply font-black tracking-wider
+}
+
+.p {
+  @apply text-3xl font-black
+}
+
 .button-alt {
-  @apply bg-white text-brand px-8 py-4 uppercase font-semibold text-sm tracking-wide  transition-colors hover:bg-slate-950 hover:text-white
+  @apply bg-white text-brand px-8 py-4 uppercase font-semibold text-sm tracking-wide transition-colors hover:bg-slate-950 hover:text-white
 }
 
 .button {
